Fixed game notification menu wrapping

--- a/src/client/game/Game.css
+++ b/src/client/game/Game.css
@@ -110,14 +110,11 @@
 
 .notificationMenu h1 {
     color: black;
-    position: absolute;
     top: 0;
-    left: 50%;
-    margin: 0;
     margin-top: calc(1.5 * (1vw + 1vh - 1vmin));
-    transform: translate(-50%, 0%);
     font-size: calc(5px + 2.5 * (1vw + 1vh - 1vmin));
     text-align: center;
+    white-space: normal !important;
     width: 100%;
 }
 
